--- a/dl4ss-page/index.html
+++ b/dl4ss-page/index.html
@@ -13,10 +13,10 @@
 
     <script>
     const interactions = [
-            {title: "Most Populous Cities - 11th Census", path: "https://louis-cousino.github.io/dl4ss_charts.github.io/interactive_charts/most_populous_cities_11th_census/index.html"},
-            {title: "Most Populous Cities - 12th Census", path: "https://louis-cousino.github.io/dl4ss_charts.github.io/interactive_charts/most_populous_cities_12th_census/index.html"},
-            {title: "Most Populous States - 11th Census", path: "https://louis-cousino.github.io/dl4ss_charts.github.io/interactive_charts/most_populous_states_11th_census/index.html"},
-            {title: "Most Populous States - 12th Census", path: "https://louis-cousino.github.io/dl4ss_charts.github.io/interactive_charts/most_populous_states_12th_census/index.html"}
+            {title: "Most Populous Cities - 11th Census", path: "https://dl4ss.github.io/slow-reveal-graphs/interactive_charts/most_populous_cities_11th_census/index.html"},
+            {title: "Most Populous Cities - 12th Census", path: "https://dl4ss.github.io/slow-reveal-graphs/interactive_charts/most_populous_cities_12th_census/index.html"},
+            {title: "Most Populous States - 11th Census", path: "https://dl4ss.github.io/slow-reveal-graphs/interactive_charts/most_populous_states_11th_census/index.html"},
+            {title: "Most Populous States - 12th Census", path: "https://dl4ss.github.io/slow-reveal-graphs/interactive_charts/most_populous_states_12th_census/index.html"}
         ];
 
         const headers = ["Title", "Path"];
